--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #141414;
-    color: rgba(255, 255, 255, 0.993);
+    color: White;
     height: 100vh;
     margin: 0;
 }
