--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #141414;
-    color: White;
+    color: white;
     height: 100vh;
     margin: 0;
 }
